Accessibility fixes Improve size and contrast of client ID help image

--- a/sass/pages/login.scss
+++ b/sass/pages/login.scss
@@ -39,7 +39,7 @@
 }
 
 .ClientIdHelp-image {
-    max-width: 50rem;
+    max-width: 52.5rem;
     margin-top: 2rem;
 }
 
